<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">KnowIt</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
	<string name="photo">拍照获得</string>
	<string name="file">文件获得</string>
	<string name="set">设置</string>
	<string name="exit">退出</string>
	<string name="help">使用说明</string>
	<string name="about">关于xx</string>
</resources>
