<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@android:color/background_dark"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <!-- 第一行 -->
    <LinearLayout 
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:layout_weight="1">
        <!-- 第x个按钮  -->
        <LinearLayout 
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="5dp"
            android:layout_weight="1">
            
            <ImageButton 
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:background="@drawable/item_statedrawable"
                android:scaleType="fitCenter"
                android:id="@+id/from_photo"
                android:src="@drawable/photo"/>
            <TextView 
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/photo"/>
        </LinearLayout>
        <!-- 第x个按钮  -->
        <LinearLayout 
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_weight="1">
            <ImageButton 
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:background="@drawable/item_statedrawable"
                android:scaleType="fitCenter"
                android:id="@+id/from_file"
                android:src="@drawable/folder"/>
            <TextView 
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/file"/>
        </LinearLayout>
    </LinearLayout>"
    <!-- 第2行 -->
    <LinearLayout 
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:layout_weight="1">
        <!-- 第x个按钮  -->
        <LinearLayout 
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="5dp"
            android:layout_weight="1">
            <ImageButton 
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:background="@drawable/item_statedrawable"
                android:scaleType="fitCenter"
                android:id="@+id/help"
                android:src="@drawable/help"/>
            <TextView 
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/help"/>
        </LinearLayout>
        <!-- 第x个按钮  -->
        <LinearLayout 
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_weight="1">
            <ImageButton 
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:background="@drawable/item_statedrawable"
                android:scaleType="fitCenter"
                android:id="@+id/about"
                android:src="@drawable/about"/>
            <TextView 
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/about"/>
        </LinearLayout>
    </LinearLayout>
    <!-- 第3行 -->
    <LinearLayout 
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:layout_weight="1">
        <!-- 第x个按钮  -->
        <LinearLayout 
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="5dp"
            android:layout_weight="1">
            <ImageButton 
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:background="@drawable/item_statedrawable"
                android:scaleType="fitCenter"
                android:id="@+id/set"
                android:src="@drawable/set"/>
            <TextView 
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/set"/>
        </LinearLayout>
        <!-- 第x个按钮  -->
        <LinearLayout 
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_weight="1">
            <ImageButton 
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:background="@drawable/item_statedrawable"
                android:scaleType="fitCenter"
                android:id="@+id/exit"
                android:src="@drawable/exit"/>
            <TextView 
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/exit"/>
        </LinearLayout>
    </LinearLayout>
	
</LinearLayout>
